[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Book.gd" type="Script" id=1]

[node name="GuideBook" type="Node2D"]
script = ExtResource( 1 )

[node name="Popup" type="WindowDialog" parent="."]
visible = true
margin_left = 199.58
margin_top = 109.927
margin_right = 945.58
margin_bottom = 565.927
window_title = "World 1 Guide Book"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Popup"]
margin_left = 25.0
margin_top = 12.0
margin_right = 681.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Popup/ScrollContainer"]
margin_right = 656.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousPageButton" type="ToolButton" parent="Popup"]
margin_left = 273.216
margin_top = 413.158
margin_right = 317.216
margin_bottom = 435.158
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPageButton" type="ToolButton" parent="Popup"]
margin_left = 364.0
margin_top = 413.158
margin_right = 402.0
margin_bottom = 435.158
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageNumber" type="RichTextLabel" parent="Popup"]
margin_left = 317.0
margin_top = 413.0
margin_right = 364.0
margin_bottom = 435.0
text = "TESTING"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="popup_hide" from="Popup" to="." method="_on_Popup_popup_hide"]
[connection signal="pressed" from="Popup/PreviousPageButton" to="." method="_on_PreviousPageButton_pressed"]
[connection signal="pressed" from="Popup/NextPageButton" to="." method="_on_NextPageButton_pressed"]
